crates/sutura-app/tests/snapshots/refused-value-not-allowed__refusal@markdown.snap
---
source: crates/sutura-app/tests/golden/catalogs.rs
expression: reason
---
DimensionValueNotAllowed:
  metric: revenue
  dimension: region
