crates/sutura-app/tests/snapshots/refused-value-not-allowed__refused.snap
---
source: crates/sutura-app/tests/golden.rs
expression: reason
---
DimensionValueNotAllowed:
  metric: revenue
  dimension: region
