crates/sutura-app/tests/snapshots/refused-value-not-allowed__refused@bigquery.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: reason
---
DimensionValueNotAllowed:
  metric: recurring_revenue
  dimension: region
