crates/sutura-app/tests/snapshots/refused-value-not-allowed__refused@datafusion.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: reason
---
DimensionValueNotAllowed:
  metric: revenue
  dimension: region
